--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bc2758f0",
+   "id": "d3d47977",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "380b9fb7",
+   "id": "abfa3b19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "060ecc04",
+   "id": "c198fb44",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73f0e050",
+   "id": "84203dc0",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "15f28898",
+   "id": "c25a0254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8e410111",
+   "id": "4f36c8cb",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c117d933",
+   "id": "8c25e92d",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a29318b5",
+   "id": "8bc78c9a",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b22db4",
+   "id": "bf2442b2",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "19562e99",
+   "id": "4094ad20",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3e324e0e",
+   "id": "9c6d2e9a",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0469eec1",
+   "id": "8927c74e",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ee960b12",
+   "id": "06796af7",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2d38b176",
+   "id": "520f76cd",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5428425d",
+   "id": "675c970f",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f0f30c62",
+   "id": "b911db5e",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cd7d65f0",
+   "id": "f2d3c6f7",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1a9912a5",
+   "id": "ff4a0895",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "01e5858d",
+   "id": "1ef72472",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dae3a232",
+   "id": "3759ab77",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8698f917",
+   "id": "8dc3d9a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d90a2417",
+   "id": "100cb37d",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ca5cbad8",
+   "id": "dbcb7a58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9c452d9",
+   "id": "02f8fdde",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c644606f",
+   "id": "eddb0403",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "318c2b1b",
+   "id": "6bd244e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a393f74d",
+   "id": "8d2437c9",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "14ee5a60",
+   "id": "93630b8f",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d5faf9d0",
+   "id": "5fa8d567",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8b569291",
+   "id": "d832f4ea",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5b4587a",
+   "id": "b0ddd3b7",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "299c9592",
+   "id": "cfded342",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "814daace",
+   "id": "3afc0c64",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4f617679",
+   "id": "f98a7bb1",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "450f4f9d",
+   "id": "a6c13536",
    "metadata": {},
    "source": [
     "# What's in a module?\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "847a6efe",
+   "id": "8f469aeb",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24f7e645",
+   "id": "bc33dcba",
    "metadata": {},
    "source": [
     "# Unusual attribute names\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "754ef160",
+   "id": "e8f15d5b",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "288a0a3c",
+   "id": "394e7018",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4d11471d",
+   "id": "68f9cbcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "53713965",
+   "id": "667bd3be",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "05921609",
+   "id": "1c7a2a92",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f52dd2e1",
+   "id": "0c4e535d",
    "metadata": {},
    "source": [
     "# Some of the dunder attributes on every module\n",
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "66bebebb",
+   "id": "daf42c6b",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "841d1c05",
+   "id": "1900068a",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "8c7bf9d9",
+   "id": "a65ce4fe",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f655d0ea",
+   "id": "40a71751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "c93e901a",
+   "id": "7b53e93e",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "aff8d076",
+   "id": "16f7c873",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "aa251ce3",
+   "id": "8e379993",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "1c67a308",
+   "id": "6cf9bd7c",
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "24825eaf",
+   "id": "a72bace9",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "70c1ed65",
+   "id": "5de4c88e",
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e51579",
+   "id": "4c9754f4",
    "metadata": {},
    "source": [
     "# Exercise: Menu\n",
@@ -1863,8 +1863,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "id": "b89e85be",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'menu'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [45], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmenu\u001b[39;00m\n\u001b[1;32m      2\u001b[0m user_choice \u001b[38;5;241m=\u001b[39m menu\u001b[38;5;241m.\u001b[39mmenu([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUser chose \u001b[39m\u001b[38;5;132;01m{\u001b[39;00muser_choice\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'menu'"
+     ]
+    }
+   ],
+   "source": [
+    "import menu\n",
+    "user_choice = menu.menu(['a', 'b', 'c'])\n",
+    "print(f'User chose {user_choice}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f8e1357e",
+   "id": "4fffc90f",
    "metadata": {},
    "outputs": [],
    "source": []
